--- a/templates/index.html
+++ b/templates/index.html
@@ -105,7 +105,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Contact</h1>
-                    <p class="lead">See the code on <a href="http://www.github.com/brandonmburroughs" target="_blank">Github</a></p>
+                    <p class="lead">See the code on <a href="https://github.com/brandonmburroughs/baby-names-and-movie-stars" target="_blank">Github</a></p>
                 </div>
             </div>
         </div>
