--- a/templates/index.html
+++ b/templates/index.html
@@ -105,7 +105,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Contact</h1>
-                    <p class="lead">See the code on <a href="https://github.com/brandonmburroughs/baby-names-and-movie-stars" target="_blank">Github</a></p>
+                    <p class="lead">See the code on <a href="https://github.com/brandonmburroughs/baby-names-and-movie-stars" target="_blank">Github</a>.</p>
+                    <p class="lead">Feel free to connect with me via <a href="https://github.com/brandonmburroughs" target="_blank">Github</a>, <a href="https://twitter.com/totheburroughs" target="_blank">Twitter</a>, or <a href="https://www.linkedin.com/in/brandonmburroughs" target="_blank">LinkedIn</a>.</p>
                 </div>
             </div>
         </div>
