--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
 
                     <p class="lead">How should I look at this?  I'd want to see the overall popularity of the name, of course, but it might also be interesting to see if there is a spike when a movie star comes out with a new movie.  Did "Godfather" result in a lot of kids named Marlon or Al?  Did more kids get the name Quentin, John, Uma, or Samuel after "Pulp Fiction"?</p>
 
-                    <p class="lead">This project is a web app to satisfy your curiosities about these questions.</p>
+                    <p class="lead">This project is a web app to satisfy my curiosities about these questions.</p>
                 </div>
             </div>
         </div>
