Adding link to Github issues

--- a/templates/index.html
+++ b/templates/index.html
@@ -103,11 +103,11 @@
     <section id="contact" class="contact-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-8 col-lg-offset-2">
                     <h1>Contact</h1>
                     <p class="lead">See the code on <a href="https://github.com/brandonmburroughs/baby-names-and-movie-stars" target="_blank">Github</a>.</p>
                     <p class="lead">Feel free to connect with me via <a href="https://github.com/brandonmburroughs" target="_blank">Github</a>, <a href="https://twitter.com/totheburroughs" target="_blank">Twitter</a>, or <a href="https://www.linkedin.com/in/brandonmburroughs" target="_blank">LinkedIn</a>.</p>
-                    <p class="lead">Feel free to make suggestions for future features/enhancements as a Github issue.  Otherwise, I'll update it as ideas come to me.</p>
+                    <p class="lead">Feel free to make suggestions for future features/enhancements as a <a href="https://github.com/brandonmburroughs/baby-names-and-movie-stars/issues" target="_blank">Github issue</a>.  Otherwise, I'll update it as ideas come to me.</p>
                 </div>
             </div>
         </div>
