--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-3">
                     <h1>Enter an actor's or actress's name</h1>
-                    <form>
+                    <form onSubmit="return false;" id="actorNameForm">
                       <input type="name" class="form-control" id="inputActorName" placeholder="Name">
                     </form>
                     <br><br><br>
