Changing home page intro

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,9 +70,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-3">
-                    <h1>Enter an actor's or actress's name</h1>
+                    <h1>Baby Names and Movie Stars</h1>
+                    <p class="lead">See how the popularity of your favorite actor's or actress's first name has changed with the popularity of their movies.</p>
                     <form onSubmit="return false;" id="actorNameForm">
-                      <input type="name" class="form-control" id="inputActorName" placeholder="Name">
+                      <input type="name" class="form-control" id="inputActorName" placeholder="Enter an actor's or actress's name">
                     </form>
                     <br><br><br>
                 </div>
